[package]
name = "maeve-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maeve-kernel = { path = "../maeve-kernel" }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
anyhow = "1.0.44"
tokio = { version = "1.12.0", features = ["rt", "macros", "test-util"] }
async-trait = "0.1.51"
chrono = "0.4.19"
http = "0.2.5"
derive-new = "0.5.9"
dotenv = "0.15.0"