[package]
name = "maeve-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maeve-kernel = { path = "../maeve-kernel" }
anyhow = "1.0.44"
async-trait = "0.1.51"
chrono = "0.4.19"
derive-new = "0.5.9"
dotenv = "0.15.0"
http = "0.2.5"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
tokio = { version = "1.12.0", features = ["rt", "macros", "test-util"] }
ulid = "1.0.0"